Documents/MetaDataIO/MetadataIO-distr-33.0.3-bin/repos/src/objects/Ticker_Item__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Ticker Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TI-{00000}</displayFormat>
        <label>Ticker Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticker Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>